# spectral-process

./: LICENSE  README.md  pyproject.toml
src/spectral_process/: __init__.py  _validation.py  baseline.py  derivatives.py  normalization.py  scatter.py
src/spectral_process.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
