[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-process"
version = "0.1.0"
description = "Python tools for spectral data preprocessing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Md Ashraful Haque"}
]
keywords = [
  "spectroscopy",
  "spectral preprocessing",
  "chemometrics",
  "snv",
  "msc",
  "savitzky-golay",
  "baseline correction"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.23",
  "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[project.urls]
Homepage = "https://github.com/mah-iasri/spectral-process"
Issues = "https://github.com/mah-iasri/spectral-process/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"